[tool.poetry]
name = "n03an-me"
version = "0.1.0"
description = ""
authors = ["n03an <nouman.memon@icloud.com>"]
readme = "README.md"
packages = [{include = "n03an"}]

[tool.poetry.dependencies]
python = "^3.11"
python-fasthtml = "^0.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
